--- a/Frontend/html/admin/profile/security.html
+++ b/Frontend/html/admin/profile/security.html
@@ -23,7 +23,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../../assets/img/favicon/favicon.ico"
+      href="/assets/img/favicon/favicon.ico"
     />
 
     <!-- Fonts -->
@@ -35,43 +35,43 @@
     />
 
     <!-- Icons -->
-    <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/tabler-icons.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/fontawesome.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/tabler-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/core.css"
+      href="/assets/vendor/css/rtl/core.css"
       class="template-customizer-core-css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/theme-default.css"
+      href="/assets/vendor/css/rtl/theme-default.css"
       class="template-customizer-theme-css"
     />
-    <link rel="stylesheet" href="../../assets/css/demo.css" />
-    <link rel="stylesheet" href="../../css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/demo.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/node-waves/node-waves.css"
+      href="/assets/vendor/libs/node-waves/node-waves.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+      href="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+      href="/assets/vendor/libs/typeahead-js/typeahead.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/select2/select2.css"
+      href="/assets/vendor/libs/select2/select2.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
+      href="/assets/vendor/libs/@form-validation/umd/styles/index.min.css"
     />
     <!-- Toastr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
@@ -80,16 +80,16 @@
     <!-- Page CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/pages/page-account-settings.css"
+      href="/assets/vendor/css/pages/page-account-settings.css"
     />
 
     <!-- Helpers -->
-    <script src="../../assets/vendor/js/helpers.js"></script>
+    <script src="/assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="../../assets/vendor/js/template-customizer.js"></script>
+    <script src="/assets/vendor/js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="../../assets/js/config.js"></script>
+    <script src="/assets/js/config.js"></script>
   </head>
 
   <body>
@@ -103,10 +103,10 @@
           class="layout-menu menu-vertical menu bg-menu-theme"
         >
           <div class="app-brand demo">
-            <a href="index.html" class="app-brand-link">
+            <a href="/admin/index.html" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <img
-                  src="../assets/img/branding/logo-i-vuexy.svg"
+                  src="/assets/img/branding/logo-i-vuexy.svg"
                   alt="EDISA Logo"
                   style="height: 32px; width: auto"
                 />
@@ -128,13 +128,9 @@
           <div class="menu-inner-shadow"></div>
 
           <ul class="menu-inner py-1">
-            <!-- Apps & Pages -->
             <li class="menu-header small text-uppercase">
-              <span class="menu-header-text" data-i18n="appsAndPages"
-                >Apps & Pages</span
-              >
+              <span class="menu-header-text" data-i18n="appsAndPages">Apps & Pages</span>
             </li>
-
             <!-- User Management -->
             <li class="menu-item">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
@@ -143,25 +139,42 @@
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="all-users.html" class="menu-link">
+                  <a href="/admin/index.html" class="menu-link">
                     <div data-i18n="allUsers">All Users</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="active-users.html" class="menu-link">
+                  <a href="/admin/users/active-users.html" class="menu-link">
                     <div data-i18n="activeUsers">Active Users</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="deactive-users.html" class="menu-link">
+                  <a href="/admin/users/deactive-users.html" class="menu-link">
                     <div data-i18n="deactiveUsers">Deactive Users</div>
                   </a>
                 </li>
               </ul>
             </li>
-
-            <!-- Logout -->
+            <!-- File Management -->
             <li class="menu-item">
+              <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons ti ti-file"></i>
+                <div data-i18n="fileManagement">File Management</div>
+              </a>
+              <ul class="menu-sub">
+                <li class="menu-item">
+                  <a href="/admin/files/files.html" class="menu-link">
+                    <div data-i18n="fileList">File List</div>
+                  </a>
+                </li>
+                <li class="menu-item">
+                  <a href="/admin/files/upload-file.html" class="menu-link">
+                    <div data-i18n="uploadFile">Upload File</div>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu-item" style="margin-top:auto;">
               <a href="javascript:void(0);" class="menu-link" id="logout-btn">
                 <i class="menu-icon tf-icons ti ti-logout"></i>
                 <div data-i18n="logOut">Log Out</div>
@@ -268,7 +281,7 @@
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                      <a class="dropdown-item" href="my-profile.html">
+                      <a class="dropdown-item" href="/admin/profile/my-profile.html">
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
@@ -297,7 +310,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="my-profile.html">
+                      <a class="dropdown-item" href="/admin/profile/my-profile.html">
                         <i class="ti ti-user-check me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="myProfile"
                           >My Profile</span
@@ -305,7 +318,7 @@
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item active" href="security.html" aria-current="page">
+                      <a class="dropdown-item active" href="/admin/profile/security.html" aria-current="page">
                         <i class="ti ti-lock me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="security"
                           >Security</span
@@ -313,7 +326,7 @@
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="notifications.html">
+                      <a class="dropdown-item" href="/admin/profile/notifications.html">
                         <i class="ti ti-settings me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="settings"
                           >Settings</span
@@ -321,7 +334,7 @@
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="faq.html">
+                      <a class="dropdown-item" href="/admin/faq.html">
                         <i class="ti ti-help me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="faq">FAQ</span>
                       </a>
@@ -352,7 +365,7 @@
               <input
                 type="text"
                 class="form-control search-input container-xxl border-0"
-                data-i18n="[placeholder]search"
+                data-i18n="search"
                 placeholder="Search..."
                 aria-label="Search..."
               />
@@ -376,7 +389,7 @@
                     <li class="nav-item">
                       <a
                         class="nav-link d-flex align-items-center"
-                        href="my-profile.html"
+                        href="/admin/profile/my-profile.html"
                       >
                         <i class="ti-xs ti ti-users me-1"></i>
                         <span data-i18n="myProfile">My Profile</span>
@@ -385,7 +398,7 @@
                     <li class="nav-item">
                       <a
                         class="nav-link active d-flex align-items-center"
-                        href="security.html"
+                        href="/admin/profile/security.html"
                       >
                         <i class="ti-xs ti ti-lock me-1"></i>
                         <span data-i18n="security">Security</span>
@@ -394,7 +407,7 @@
                     <li class="nav-item">
                       <a
                         class="nav-link d-flex align-items-center"
-                        href="notifications.html"
+                        href="/admin/profile/notifications.html"
                       >
                         <i class="ti-xs ti ti-bell me-1"></i>
                         <span data-i18n="settings">Settings</span>
@@ -403,7 +416,7 @@
                     <li class="nav-item">
                       <a
                         class="nav-link d-flex align-items-center"
-                        href="faq.html"
+                        href="/admin/faq.html"
                       >
                         <i class="ti-xs ti ti-help me-1"></i>
                         <span data-i18n="faq">FAQ</span>
@@ -658,7 +671,7 @@
                                   id="apiKey"
                                   name="apiKey"
                                   data-i18n-placeholder="enterServerKey"
-                                  data-i18n="[placeholder]enterServerKey"
+                                  data-i18n="enterServerKey"
                                   placeholder="Server Key 1"
                                 />
                               </div>
@@ -677,7 +690,7 @@
                       <div class="col-md-7 order-md-1 order-0">
                         <div class="text-center mt-4 mx-3 mx-md-0">
                           <img
-                            src="../../assets/img/illustrations/girl-with-laptop.png"
+                            src="/assets/img/illustrations/girl-with-laptop.png"
                             class="img-fluid"
                             alt="Api Key Image"
                             width="202"
@@ -1075,36 +1088,47 @@
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
 
-    <script src="../../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../../assets/vendor/js/bootstrap.js"></script>
-    <script src="../../assets/vendor/libs/node-waves/node-waves.js"></script>
-    <script src="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="../../assets/vendor/libs/hammer/hammer.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
-    <script src="../../assets/vendor/js/menu.js"></script>
+    <script src="/assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="/assets/vendor/libs/popper/popper.js"></script>
+    <script src="/assets/vendor/js/bootstrap.js"></script>
+    <script src="/assets/vendor/libs/node-waves/node-waves.js"></script>
+    <script src="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="/assets/vendor/libs/hammer/hammer.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18next.min.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
+    <script src="/assets/vendor/js/menu.js"></script>
 
     <!-- endbuild -->
 
     <!-- Vendors JS -->
-    <script src="../../assets/vendor/libs/select2/select2.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
-    <script src="../../assets/vendor/libs/cleavejs/cleave.js"></script>
-    <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
+    <script src="/assets/vendor/libs/select2/select2.js"></script>
+    <script src="/assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
+    <script src="/assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
+    <script src="/assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
+    <script src="/assets/vendor/libs/cleavejs/cleave.js"></script>
+    <script src="/assets/vendor/libs/cleavejs/cleave-phone.js"></script>
 
     <!-- Main JS -->
-    <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
-    <script src="../../assets/js/main.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18next.min.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="../../js/notification.js"></script>
+    <script src="/js/notification.js"></script>
 
     <!-- Page JS -->
-    <script src="../../js/admin-auth.js"></script>
+    <script src="/js/admin-auth.js"></script>
+    <script>
+      $(document).ready(function () {
+        // Test Toastr
+        if (typeof showToastr === 'function') {
+          showToastr('Test Toastr on security.html', 'success');
+          console.log('showToastr called');
+        } else {
+          console.error('showToastr is not defined');
+        }
+      });
+    </script>
   </body>
 </html>
