--- a/Frontend/html/auth/verify-email.html
+++ b/Frontend/html/auth/verify-email.html
@@ -30,48 +30,48 @@
     />
 
     <!-- Icons -->
-    <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/tabler-icons.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/fontawesome.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/tabler-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/core.css"
+      href="/assets/vendor/css/rtl/core.css"
       class="template-customizer-core-css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/theme-default.css"
+      href="/assets/vendor/css/rtl/theme-default.css"
       class="template-customizer-theme-css"
     />
-    <link rel="stylesheet" href="../../assets/css/demo.css" />
-    <link rel="stylesheet" href="../../assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/demo.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/node-waves/node-waves.css"
+      href="/assets/vendor/libs/node-waves/node-waves.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+      href="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+      href="/assets/vendor/libs/typeahead-js/typeahead.css"
     />
 
     <!-- Page CSS -->
     <!-- Page -->
-    <link rel="stylesheet" href="../../assets/vendor/css/pages/page-auth.css" />
+    <link rel="stylesheet" href="/assets/vendor/css/pages/page-auth.css" />
 
     <!-- Helpers -->
-    <script src="../../assets/vendor/js/helpers.js"></script>
+    <script src="/assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="../../assets/vendor/js/template-customizer.js"></script>
+    <script src="/assets/vendor/js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="../../assets/js/config.js"></script>
+    <script src="/assets/js/config.js"></script>
     <!-- Toastr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
   </head>
@@ -149,7 +149,7 @@
                     </svg>
                   </span> -->
                 <img
-                  src="../../assets/img/branding/logo-i-vuexy.svg"
+                  src="/assets/img/branding/logo-i-vuexy.svg"
                   alt="EDISA Logo"
                   style="height: 40px; width: auto"
                 />
@@ -190,25 +190,25 @@
     <!-- / Content -->
 
     <!-- Core JS -->
-    <script src="../../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../../assets/vendor/js/bootstrap.js"></script>
-    <script src="../../assets/vendor/js/menu.js"></script>
+    <script src="/assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="/assets/vendor/libs/popper/popper.js"></script>
+    <script src="/assets/vendor/js/bootstrap.js"></script>
+    <script src="/assets/vendor/js/menu.js"></script>
 
     <!-- Vendors JS -->
-    <script src="../../assets/vendor/libs/select2/select2.js"></script>
+    <script src="/assets/vendor/libs/select2/select2.js"></script>
 
     <!-- Main JS -->
-    <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
-    <script src="../../assets/js/main.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18next.min.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="../../js/notification.js"></script>
-    <script type="module" src="../../js/auth-utils.js"></script>
-    <script type="module" src="../../js/api.js"></script>
-    <script type="module" src="../../js/auth-forms.js"></script>
+    <script src="/js/notification.js"></script>
+    <script type="module" src="/js/auth-utils.js"></script>
+    <script type="module" src="/js/api.js"></script>
+    <script type="module" src="/js/auth-forms.js"></script>
 
   </body>
 </html>
