--- a/Frontend/html/admin/users/deactive-users.html
+++ b/Frontend/html/admin/users/deactive-users.html
@@ -23,7 +23,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="../../assets/img/favicon/favicon.ico"
+      href="/assets/img/favicon/favicon.ico"
     />
 
     <!-- Fonts -->
@@ -35,68 +35,68 @@
     />
 
     <!-- Icons -->
-    <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/tabler-icons.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/fontawesome.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/tabler-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/core.css"
+      href="/assets/vendor/css/rtl/core.css"
       class="template-customizer-core-css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/theme-default.css"
+      href="/assets/vendor/css/rtl/theme-default.css"
       class="template-customizer-theme-css"
     />
-    <link rel="stylesheet" href="../../assets/css/demo.css" />
-    <link rel="stylesheet" href="../../css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/demo.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/node-waves/node-waves.css"
+      href="/assets/vendor/libs/node-waves/node-waves.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+      href="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+      href="/assets/vendor/libs/typeahead-js/typeahead.css"
     />
     <!-- Toastr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css"
+      href="/assets/vendor/libs/datatables-bs5/datatables.bootstrap5.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css"
+      href="/assets/vendor/libs/datatables-responsive-bs5/responsive.bootstrap5.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/datatables-buttons-bs5/buttons.bootstrap5.css"
+      href="/assets/vendor/libs/datatables-buttons-bs5/buttons.bootstrap5.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/select2/select2.css"
+      href="/assets/vendor/libs/select2/select2.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
+      href="/assets/vendor/libs/@form-validation/umd/styles/index.min.css"
     />
 
     <!-- Page CSS -->
 
     <!-- Helpers -->
-    <script src="../../assets/vendor/js/helpers.js"></script>
+    <script src="/assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="../../assets/vendor/js/template-customizer.js"></script>
+    <script src="/assets/vendor/js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="../../assets/js/config.js"></script>
+    <script src="/assets/js/config.js"></script>
   </head>
 
   <body>
@@ -110,10 +110,10 @@
           class="layout-menu menu-vertical menu bg-menu-theme"
         >
           <div class="app-brand demo">
-            <a href="index.html" class="app-brand-link">
+            <a href="/admin/index.html" class="app-brand-link">
               <span class="app-brand-logo demo">
                 <img
-                  src="../assets/img/branding/logo-i-vuexy.svg"
+                  src="/assets/img/branding/logo-i-vuexy.svg"
                   alt="EDISA Logo"
                   style="height: 32px; width: auto"
                 />
@@ -136,34 +136,52 @@
 
           <ul class="menu-inner py-1">
             <li class="menu-header small text-uppercase">
-              <span class="menu-header-text" data-i18n="appsAndPages"
-                >Apps &amp; Pages</span
-              >
+              <span class="menu-header-text" data-i18n="appsAndPages">Apps & Pages</span>
             </li>
-            <li class="menu-item active">
+            <!-- User Management -->
+            <li class="menu-item open active">
               <a href="javascript:void(0);" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons ti ti-users"></i>
                 <div data-i18n="userManagement">User Management</div>
               </a>
               <ul class="menu-sub">
                 <li class="menu-item">
-                  <a href="all-users.html" class="menu-link">
+                  <a href="/admin/index.html" class="menu-link">
                     <div data-i18n="allUsers">All Users</div>
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="active-users.html" class="menu-link">
+                  <a href="/admin/users/active-users.html" class="menu-link">
                     <div data-i18n="activeUsers">Active Users</div>
                   </a>
                 </li>
                 <li class="menu-item active">
-                  <a href="deactive-users.html" class="menu-link">
+                  <a href="/admin/users/deactive-users.html" class="menu-link">
                     <div data-i18n="deactiveUsers">Deactive Users</div>
                   </a>
                 </li>
               </ul>
             </li>
+            <!-- File Management -->
             <li class="menu-item">
+              <a href="javascript:void(0);" class="menu-link menu-toggle">
+                <i class="menu-icon tf-icons ti ti-file"></i>
+                <div data-i18n="fileManagement">File Management</div>
+              </a>
+              <ul class="menu-sub">
+                <li class="menu-item">
+                  <a href="/admin/files/files.html" class="menu-link">
+                    <div data-i18n="fileList">File List</div>
+                  </a>
+                </li>
+                <li class="menu-item">
+                  <a href="/admin/files/upload-file.html" class="menu-link">
+                    <div data-i18n="uploadFile">Upload File</div>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu-item" style="margin-top:auto;">
               <a href="javascript:void(0);" class="menu-link" id="logout-btn">
                 <i class="menu-icon tf-icons ti ti-logout"></i>
                 <div data-i18n="logOut">Log Out</div>
@@ -269,7 +287,7 @@
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end">
                     <li>
-                      <a class="dropdown-item" href="my-profile.html">
+                      <a class="dropdown-item" href="/admin/profile/my-profile.html">
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
@@ -298,7 +316,7 @@
                       <div class="dropdown-divider"></div>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="my-profile.html">
+                      <a class="dropdown-item" href="/admin/profile/my-profile.html">
                         <i class="ti ti-user-check me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="myProfile"
                           >My Profile</span
@@ -306,7 +324,7 @@
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="security.html">
+                      <a class="dropdown-item" href="/admin/profile/security.html">
                         <i class="ti ti-lock me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="security"
                           >Security</span
@@ -314,7 +332,7 @@
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="notifications.html">
+                      <a class="dropdown-item" href="/admin/profile/notifications.html">
                         <i class="ti ti-settings me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="settings"
                           >Settings</span
@@ -322,7 +340,7 @@
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="faq.html">
+                      <a class="dropdown-item" href="/admin/faq.html">
                         <i class="ti ti-help me-2 ti-sm"></i>
                         <span class="align-middle" data-i18n="faq">FAQ</span>
                       </a>
@@ -372,7 +390,7 @@
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item">
-                      <a href="index.html" data-i18n="dashboard">Dashboard</a>
+                      <a href="/admin/index.html" data-i18n="dashboard">Dashboard</a>
                     </li>
                     <li class="breadcrumb-item active" aria-current="page" data-i18n="deactiveUsers">Deactive Users</li>
                   </ol>
@@ -487,41 +505,43 @@
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
 
-    <script src="../../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../../assets/vendor/js/bootstrap.js"></script>
-    <script src="../../assets/vendor/libs/node-waves/node-waves.js"></script>
-    <script src="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="../../assets/vendor/libs/hammer/hammer.js"></script>
-    <script src="../../assets/vendor/libs/typeahead-js/typeahead.js"></script>
-    <script src="../../assets/vendor/js/menu.js"></script>
+    <script src="/assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="/assets/vendor/libs/popper/popper.js"></script>
+    <script src="/assets/vendor/js/bootstrap.js"></script>
+    <script src="/assets/vendor/libs/node-waves/node-waves.js"></script>
+    <script src="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="/assets/vendor/libs/hammer/hammer.js"></script>
+    <script src="/assets/vendor/libs/typeahead-js/typeahead.js"></script>
+    <script src="/assets/vendor/js/menu.js"></script>
 
     <!-- endbuild -->
 
     <!-- Vendors JS -->
-    <script src="../../assets/vendor/libs/moment/moment.js"></script>
-    <script src="../../assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script>
-    <script src="../../assets/vendor/libs/select2/select2.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
-    <script src="../../assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
-    <script src="../../assets/vendor/libs/cleavejs/cleave.js"></script>
-    <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
+    <script src="/assets/vendor/libs/moment/moment.js"></script>
+    <script src="/assets/vendor/libs/datatables-bs5/datatables-bootstrap5.js"></script>
+    <script src="/assets/vendor/libs/select2/select2.js"></script>
+    <script src="/assets/vendor/libs/@form-validation/umd/bundle/popular.min.js"></script>
+    <script src="/assets/vendor/libs/@form-validation/umd/plugin-bootstrap5/index.min.js"></script>
+    <script src="/assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
+    <script src="/assets/vendor/libs/cleavejs/cleave.js"></script>
+    <script src="/assets/vendor/libs/cleavejs/cleave-phone.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
     <!-- Main JS -->
-    <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
-    <script src="../../assets/js/main.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18next.min.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="../../js/notification.js"></script>
+    <script src="/js/notification.js"></script>
 
     <!-- Page JS -->
-    <script src="../../js/admin-auth.js"></script>
+    <script src="/js/admin-auth.js"></script>
     <script>
-      loadDeactiveUsersTable();
+      if (typeof loadDeactiveUsersTable === "function") {
+        loadDeactiveUsersTable();
+      }
     </script>
     <script>
       $(document).ready(async function () {
@@ -714,13 +734,13 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content" style="background: #fff; border-radius: 12px; border: 2px solid #28c76f;">
       <div class="modal-header" style="background: #e8f8f2; border-bottom: 1px solid #28c76f;">
-        <h5 class="modal-title fw-bold text-success w-100 text-center" id="restoreUserModalLabel" style="padding: 0; text-align: center;">
+        <h5 class="modal-title fw-bold text-success" id="restoreUserModalLabel" style="padding-left: 130px;">
           <i class="ti ti-refresh me-2"></i><span data-i18n="restoreUserConfirmTitle">Restore User Confirmation</span>
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="alert alert-info border border-info" role="alert" style="background: #f4faff; color: #1e2e50;">
+        <div class="alert alert-success border border-success" role="alert" style="background: #f4faff; color: #1e2e50;">
           <h6 class="alert-heading mb-2 fw-bold">
             <i class="ti ti-info-circle me-2"></i><span data-i18n="restoreUserAccount">Restore User Account</span>
           </h6>
@@ -742,6 +762,7 @@
                 <div class="mb-2"><strong data-i18n="username">Username:</strong> <span class="restore-user-username"></span></div>
                 <div class="mb-2"><strong data-i18n="fullName">Full Name:</strong> <span class="restore-user-fullName"></span></div>
                 <div class="mb-2"><strong data-i18n="email">Email:</strong> <span class="restore-user-email"></span></div>
+                <div class="mb-2"><strong data-i18n="phoneNumber">Phone:</strong> <span class="restore-user-phone"></span></div>
               </div>
               <div class="col-md-6">
                 <div class="mb-2"><strong data-i18n="status">Status:</strong> <span class="restore-user-status"></span></div>
@@ -754,8 +775,8 @@
         </div>
       </div>
       <div class="modal-footer bg-white border-top border-success">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="cancel"><i class="ti ti-x me-1"></i>Cancel</button>
-        <button type="button" class="btn btn-success fw-bold w-100" id="confirmRestoreUser" data-i18n="restoreUser"><i class="ti ti-refresh me-1"></i>Restore User</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="cancel" style="min-width: 120px;"><i class="ti ti-x me-1"></i>Cancel</button>
+        <button type="button" class="btn btn-success fw-bold" id="confirmRestoreUser" data-i18n="restoreUser" style="min-width: 120px;"><i class="ti ti-refresh me-1"></i>Restore User</button>
       </div>
     </div>
   </div>
