--- a/Frontend/html/auth/change-password.html
+++ b/Frontend/html/auth/change-password.html
@@ -28,56 +28,56 @@
     />
 
     <!-- Icons -->
-    <link rel="stylesheet" href="../../assets/vendor/fonts/fontawesome.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/tabler-icons.css" />
-    <link rel="stylesheet" href="../../assets/vendor/fonts/flag-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/fontawesome.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/tabler-icons.css" />
+    <link rel="stylesheet" href="/assets/vendor/fonts/flag-icons.css" />
 
     <!-- Core CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/core.css"
+      href="/assets/vendor/css/rtl/core.css"
       class="template-customizer-core-css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/css/rtl/theme-default.css"
+      href="/assets/vendor/css/rtl/theme-default.css"
       class="template-customizer-theme-css"
     />
-    <link rel="stylesheet" href="../../assets/css/demo.css" />
-    <link rel="stylesheet" href="../../assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/demo.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/node-waves/node-waves.css"
+      href="/assets/vendor/libs/node-waves/node-waves.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
+      href="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"
     />
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/typeahead-js/typeahead.css"
+      href="/assets/vendor/libs/typeahead-js/typeahead.css"
     />
     <!-- Vendor -->
     <link
       rel="stylesheet"
-      href="../../assets/vendor/libs/@form-validation/umd/styles/index.min.css"
+      href="/assets/vendor/libs/@form-validation/umd/styles/index.min.css"
     />
 
     <!-- Page CSS -->
     <!-- Page -->
-    <link rel="stylesheet" href="../../assets/vendor/css/pages/page-auth.css" />
-    <link rel="stylesheet" href="../../css/auth.css" />
+    <link rel="stylesheet" href="/assets/vendor/css/pages/page-auth.css" />
+    <link rel="stylesheet" href="/css/auth.css" />
     <!-- Toastr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 
     <!-- Helpers -->
-    <script src="../../assets/vendor/js/helpers.js"></script>
+    <script src="/assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Template customizer: To hide customizer set displayCustomizer value false in config.js.  -->
-    <script src="../../assets/vendor/js/template-customizer.js"></script>
+    <script src="/assets/vendor/js/template-customizer.js"></script>
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="../../assets/js/config.js"></script>
+    <script src="/assets/js/config.js"></script>
   </head>
 
   <body>
@@ -154,7 +154,7 @@
                     </svg>
                   </span> -->
                   <img
-                    src="../../assets/img/branding/logo-i-vuexy.svg"
+                    src="/assets/img/branding/logo-i-vuexy.svg"
                     alt="EDISA Logo"
                     style="height: 40px; width: auto"
                   />
@@ -258,7 +258,7 @@
               </form>
 
               <p class="text-center">
-                <a href="../../html/admin/index.html">
+                <a href="/admin/index.html">
                   <i class="ti ti-chevron-left scaleX-n1-rtl me-1"></i>
                   <span data-i18n="backToUserManagement"
                     >Back to User Management</span
@@ -275,25 +275,25 @@
     <!-- / Content -->
 
     <!-- Core JS -->
-    <script src="../../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../../assets/vendor/js/bootstrap.js"></script>
-    <script src="../../assets/vendor/js/menu.js"></script>
+    <script src="/assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="/assets/vendor/libs/popper/popper.js"></script>
+    <script src="/assets/vendor/js/bootstrap.js"></script>
+    <script src="/assets/vendor/js/menu.js"></script>
 
     <!-- Vendors JS -->
-    <script src="../../assets/vendor/libs/select2/select2.js"></script>
+    <script src="/assets/vendor/libs/select2/select2.js"></script>
 
     <!-- Main JS -->
-    <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
-    <script src="../../assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
-    <script src="../../assets/js/main.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18next.min.js"></script>
+    <script src="/assets/vendor/libs/i18n/i18nextHttpBackend.min.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script src="../../js/notification.js"></script>
-    <script type="module" src="../../js/auth-utils.js"></script>
-    <script type="module" src="../../js/api.js"></script>
-    <script type="module" src="../../js/auth-forms.js"></script>
+    <script src="/js/notification.js"></script>
+    <script type="module" src="/js/auth-utils.js"></script>
+    <script type="module" src="/js/api.js"></script>
+    <script type="module" src="/js/auth-forms.js"></script>
     <script>
       // Password visibility toggle
       document.querySelectorAll(".input-group-text").forEach((toggle) => {
@@ -327,33 +327,31 @@
 
           // Basic validation
           if (!currentPassword || !newPassword || !confirmPassword) {
-            alert("Please fill in all fields");
+            showToastr("error", "Please fill in all fields");
             return;
           }
 
           if (newPassword !== confirmPassword) {
-            alert("New passwords do not match");
+            showToastr("error", "New passwords do not match");
             return;
           }
 
           // Password strength validation
           const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d).{6,}$/;
           if (!passwordRegex.test(newPassword)) {
-            alert(
-              "Password must contain at least one uppercase letter, one lowercase letter, and one number",
-            );
+            showToastr("error", "Password must contain at least one uppercase letter, one lowercase letter, and one number");
             return;
           }
 
           try {
-            const token = localStorage.getItem("token");
+            const token = localStorage.getItem("authToken");
             if (!token) {
-              alert("Please login first");
+              showToastr("error", "Please login first");
               window.location.href = "login.html";
               return;
             }
 
-            const response = await fetch("/api/auth/change-password", {
+            const response = await fetch("http://localhost:5050/api/Auth/change-password", {
               method: "POST",
               headers: {
                 "Content-Type": "application/json",
@@ -368,14 +366,14 @@
             const result = await response.json();
 
             if (response.ok) {
-              alert("Password changed successfully!");
-              window.location.href = "../../html/admin/index.html";
+              showToastr("success", "Password changed successfully!");
+              window.location.href = "/admin/index.html";
             } else {
-              alert(result.message || "Failed to change password");
+              showToastr("error", result.message || "Failed to change password");
             }
           } catch (error) {
             console.error("Error:", error);
-            alert("An error occurred while changing password");
+            showToastr("error", "An error occurred while changing password");
           }
         });
 
